@@ -23,12 +23,109 @@
 
 package com.mysql.cj.mysqlx.io;
 
-import org.junit.Ignore;
+import static org.junit.Assert.assertEquals;
+
+import java.nio.ByteBuffer;
+import java.nio.channels.AsynchronousByteChannel;
+import java.nio.channels.CompletionHandler;
+import java.util.concurrent.Future;
+
+import org.junit.Test;
+
+import com.mysql.cj.core.exceptions.CJCommunicationsException;
+import com.mysql.cj.mysqlx.protobuf.Mysqlx.Ok;
 
 /**
  * Tests for {@link AsyncMessageReader}.
  */
-@Ignore
 public class AsyncMessageReaderTest {
-    // TODO: write test (remove @Ignore above before writing first test)
+
+    static class BaseTestChannel implements AsynchronousByteChannel {
+        public boolean open = true;
+        CompletionHandler<Integer, ?> readHandler;
+        ByteBuffer readBuf;
+        CompletionHandler<Integer, ?> writeHandler;
+
+        public boolean isOpen() {
+            return this.open;
+        }
+
+        public void close() {
+            this.open = false;
+        }
+
+        public Future<Integer> read(ByteBuffer dst) {
+            throw new UnsupportedOperationException();
+        }
+
+        public Future<Integer> write(ByteBuffer src) {
+            throw new UnsupportedOperationException();
+        }
+
+        public <A> void read(ByteBuffer dst, A attachment, CompletionHandler<Integer,? super A> handler) {
+            this.readHandler = handler;
+            this.readBuf = dst;
+        }
+
+        public <A> void write(ByteBuffer src, A attachment, CompletionHandler<Integer,? super A> handler) {
+            this.writeHandler = handler;
+        }
+
+        public void completeRead(int bytes, byte[] data) {
+            if (data != null) {
+                readBuf.put(data);
+            }
+            this.readHandler.completed(bytes, null);
+        }
+
+        public void failRead() {
+            this.readHandler.failed(new Exception("Forced failure"), null);
+        }
+    }
+
+    /**
+     * Test that an operation does not hang due to waiting on a socket that is closed. This happens when the socket is closed after a message listener is
+     * added. If the close message (read with size = -1) is not properly propagated to the SyncReader, the thread will hang waiting for data.
+     *
+     * Bug#22972057
+     */
+    @Test
+    public void testBug22972057() {
+        BaseTestChannel channel = new BaseTestChannel();
+        AsyncMessageReader reader = new AsyncMessageReader(channel);
+        reader.start();
+
+        // close the socket after the read is pending
+        new Thread(() -> {
+                    try {
+                        Thread.sleep(100);
+                    } catch (InterruptedException ex) {
+                        ex.printStackTrace();
+                    }
+                    // this is what we get from the socket when it's closed/RST
+                    channel.completeRead(-1, null);
+        }).start();
+
+        // interrupt this test thread if it does happen to hang
+        Thread testThread = Thread.currentThread();
+        Thread interruptThread = new Thread(() -> {
+                    try {
+                        Thread.sleep(1000);
+                    } catch (InterruptedException ex) {
+                        return;
+                    }
+                    testThread.interrupt();
+                });
+        interruptThread.start();
+
+        try {
+            // block trying to read which should fail when the socket is later closed
+            reader.read(Ok.class);
+        } catch (CJCommunicationsException ex) {
+            assertEquals("Socket closed", ex.getMessage());
+        } finally {
+            // cancel the interrupt thread
+            interruptThread.interrupt();
+        }
+    }
 }
